# ptr-containers

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: CMakeLists.txt
include/ptr-containers/: container_base.hpp  ownptrvec.hpp  ptrvecview.hpp  template_helpers.hpp  valueptr.hpp
scripts/: fetch-catch2.sh  generator.sh
tests/: CMakeLists.txt  fetch-catch2.sh  ownptrvec.cpp  ptrvecview.cpp  template_helpers.cpp  valueptr.cpp
